--- a/templates/accounts/login-page.html
+++ b/templates/accounts/login-page.html
@@ -73,6 +73,22 @@
                     </div>
                 </div>
                 {% endif %}
+                {% if info %}
+                <div id="notifications" class="section cd-section section-notifications">
+                    <div class="alert alert-warning">
+                        <div class="container">
+                          <div class="alert-icon">
+                            <i class="material-icons">warning</i>
+                          </div>
+                          <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                            <span aria-hidden="true"><i class="material-icons">clear</i></span>
+                          </button>
+                        <b>Info Alert:</b> {{ info }}
+                        </div>
+                        <div class="clearfix"></div>
+                    </div>
+                </div>
+                {% endif %}
             </div>
         </div>
     </div>
