--- a/templates/shared/_dashboard.html
+++ b/templates/shared/_dashboard.html
@@ -122,12 +122,16 @@ The above copyright notice and this permission notice shall be included in all c
                     <ul class="navbar-nav">
                         {% for account in accounts %}
                             {% if account.role == 'Administrator' %}
-                                <li class="nav-item">
-                                    <a class="nav-link" href="javascript:;">
-                                        <a href="/admin"><i class="material-icons">admin_panel_settings</i>
+                                <li class="nav-item dropdown">
+                                    <a class="nav-link" href="javascript:" id="navbarDropdownProfile" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                        <i class="material-icons">admin_panel_settings</i>
                                         Admin Panel</a>
                                         <p class="d-lg-none d-md-block">Admin Panel</p>
-                                    </a>
+                                    <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownProfile">
+                                        <a class="dropdown-item" href="/admin/toolbox">Toolbox</a>
+                                        <div class="dropdown-divider"></div>
+                                        <a class="dropdown-item" href="/admin/users">User Mgmt</a>
+                                    </div>
                                 </li>
                             {% endif %}
                         {% endfor %}
