Building CSF map

--- a/templates/frameworks/index.html
+++ b/templates/frameworks/index.html
@@ -1,5 +1,5 @@
 {% extends "shared/_dashboard.html" %}
-{% block title %} Product Index {% endblock %}
+{% block title %} Framework Info {% endblock %}
 
 {% block main_content %}
     <div class="content">
