--- a/templates/frameworks/CDM.html
+++ b/templates/frameworks/CDM.html
@@ -1,33 +1,42 @@
 {% extends "shared/_dashboard.html" %}
-{% block title %} Framework Mapping {% endblock %}
+{% block title %} CDM Mapping {% endblock %}
 
 {% block main_content %}
     <div class="content">
         <div class="container">
             <div id="nav-tabs">
-                <h3>Frameworks</h3>
+                <h3></h3>
                 <div class="row">
                     <div class="col-lg-12 col-md-8">
                         <div class="card card-nav-tabs">
                             <div class="card-header card-header-warning">
                                 <div class="nav-tabs-navigation">
                                     <div class="nav-tabs-wrapper">
-                                        <ul class="nav nav-tabs" data-tabs="tabs">
-                                            {% for framework in frame %}
-                                                <li class="nav-item ">
-                                                {% if framework.shortname == 'CDM' %}
-                                                    <a class="nav-link active show" href="#{{ framework.shortname }}" data-toggle="tab" aria-selected="true">
-                                                        <i class="material-icons">share</i>
-                                                        {{ framework.shortname }}
-                                                    </a>
-                                                {% else %}
-                                                    <a class="nav-link" href="#{{ framework.shortname }}" data-toggle="tab" aria-selected="true">
-                                                        <i class="material-icons">share</i>
-                                                        {{ framework.shortname }}
-                                                    </a>
-                                                {% endif %}
-                                                </li>
-                                            {% endfor %}
+                                        <ul class="nav nav-tabs">
+                                            <li class="nav-item">
+                                                <a class="nav-link active show" href="#CDM" aria-selected="true">
+                                                    <i class="material-icons">share</i>
+                                                    CDM
+                                                </a>
+                                            </li>
+                                            <li class="nav-item">
+                                                <a class="nav-link" href="/frameworks/csf" aria-selected="true">
+                                                    <i class="material-icons">share</i>
+                                                    CSF
+                                                </a>
+                                            </li>
+                                            <li class="nav-item">
+                                                <a class="nav-link" href="/frameworks/csc" aria-selected="true">
+                                                    <i class="material-icons">share</i>
+                                                    CSC
+                                                </a>
+                                            </li>
+{#                                            <li class="nav-item">#}
+{#                                                <a class="nav-link" href="/frameworks/cobit" aria-selected="true">#}
+{#                                                    <i class="material-icons">share</i>#}
+{#                                                    Cobit 5#}
+{#                                                </a>#}
+{#                                            </li>#}
                                         </ul>
                                     </div>
                                 </div>
