Start building CSF Assessment

--- a/templates/frameworks/CDM.html
+++ b/templates/frameworks/CDM.html
@@ -25,12 +25,12 @@
                                                     CSF
                                                 </a>
                                             </li>
-                                            <li class="nav-item">
-                                                <a class="nav-link" href="/frameworks/csc" aria-selected="true">
-                                                    <i class="material-icons">share</i>
-                                                    CSC
-                                                </a>
-                                            </li>
+{#                                            <li class="nav-item">#}
+{#                                                <a class="nav-link" href="/frameworks/csc" aria-selected="true">#}
+{#                                                    <i class="material-icons">share</i>#}
+{#                                                    CSC#}
+{#                                                </a>#}
+{#                                            </li>#}
 {#                                            <li class="nav-item">#}
 {#                                                <a class="nav-link" href="/frameworks/cobit" aria-selected="true">#}
 {#                                                    <i class="material-icons">share</i>#}
@@ -61,8 +61,8 @@
                                                             <i class="material-icons">fingerprint</i>
                                                         </div>
                                                         <h4>Identify</h4>
-                                                        <p></p>
                                                     </div>
+
                                                 </div>
                                                 <div class="col-sm-2" style="border-right: 1px solid darkgray; border-bottom: 1px solid darkgray">
                                                     <div class="info">
