--- a/templates/frameworks/csf.html
+++ b/templates/frameworks/csf.html
@@ -25,12 +25,12 @@
                                                     CSF
                                                 </a>
                                             </li>
-                                            <li class="nav-item">
-                                                <a class="nav-link" href="/frameworks/csc" aria-selected="true">
-                                                    <i class="material-icons">share</i>
-                                                    CSC
-                                                </a>
-                                            </li>
+{#                                            <li class="nav-item">#}
+{#                                                <a class="nav-link" href="/frameworks/csc" aria-selected="true">#}
+{#                                                    <i class="material-icons">share</i>#}
+{#                                                    CSC#}
+{#                                                </a>#}
+{#                                            </li>#}
                                         </ul>
                                     </div>
                                 </div>
