--- a/templates/shared/_dashboard.html
+++ b/templates/shared/_dashboard.html
@@ -74,9 +74,9 @@ The above copyright notice and this permission notice shall be included in all c
                     </a>
                 </li>
                 <li class="nav-item ">
-                    <a class="nav-link" href="#">
+                    <a class="nav-link" href="../assessments/main">
                         <i class="material-icons">notifications</i>
-                        <p>Notifications</p>
+                        <p>Assessments</p>
                     </a>
                 </li>
                 <li class="nav-item ">
