working on CSF assessment

--- a/templates/assessments/index.html
+++ b/templates/assessments/index.html
@@ -7,10 +7,20 @@
             <p>Assessments Landing Page</p>
             <a href="/assessments/csf">CSF Assessment</a>
             <p>Under Construction</p>
-            <a href="/assessments/cdm">CSF Assessment</a>
+            <a href="/assessments/cdm">CDM Assessment</a>
         </div>
     </div>
 {% endblock %}
 
 {% block additional_js %}
+    <!--   Core JS Files   -->
+	<script src="/static/js/jquery-2.2.4.min.js" type="text/javascript"></script>
+	<script src="/static/js/bootstrap.min.js" type="text/javascript"></script>
+	<script src="/static/js/jquery.bootstrap.js" type="text/javascript"></script>
+
+	<!--  Plugin for the Wizard -->
+	<script src="/static/js/material-bootstrap-wizard.js"></script>
+
+	<!--  More information about jquery.validate here: http://jqueryvalidation.org/	 -->
+	<script src="/static/js/jquery.validate.min.js"></script>
 {% endblock %}
