--- a/templates/shared/_dashboard.html
+++ b/templates/shared/_dashboard.html
@@ -26,6 +26,8 @@ The above copyright notice and this permission notice shall be included in all c
     <!-- CSS Files -->
     <link href="/static/css/material-dashboard.css?v=2.1.2" rel="stylesheet"/>
 
+
+    {% block additional_css %}{% endblock %}
 </head>
 
 <body class="">
