--- a/templates/assessments/index.html
+++ b/templates/assessments/index.html
@@ -28,7 +28,7 @@
                         </div>
                         <div class="card-footer">
                             <button class="btn btn-warning btn-sm" onclick="window.location.href='/assessments/cdm';">
-                                Start Assessment
+                                Start New Assessment
                             </button>
                         </div>
                     </div>
@@ -54,7 +54,7 @@
                         </div>
                         <div class="card-footer">
                             <button class="btn btn-warning btn-sm" onclick="window.location.href='/assessments/ID.AM-1';">
-                                Start Assessment
+                                Start New Assessment
                             </button>
                         </div>
                     </div>
